updating paths from md to outlook

--- a/code/smoke_template_drop_level.Rmd
+++ b/code/smoke_template_drop_level.Rmd
@@ -231,7 +231,7 @@ bsky_col <- read_csv("../raw_data/bsky_gray_color_ramp.csv",
 ##-------------
 
 # smoke outlook directory
-outlook_smoke <- paste("../outlook/",
+outlook_smoke <- paste("../outlooks/",
                   params$OUTLOOK_PATH,
                   "/",
                   params$MODEL_RUN, sep = "")
